// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippets routes GET /:id can get a snippet by external ID 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "username": "crasken",
  },
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key2":"value2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes GET /preview can get last page of snippets 1`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.045Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "4GAx529",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key9":"value9"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 9",
          "id": "nBXweM2",
          "sentAt": "1970-01-01T00:00:00.090Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 9,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.040Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "m4AqDpK",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key8":"value8"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 8",
          "id": "oPrOQ46",
          "sentAt": "1970-01-01T00:00:00.080Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 8,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.035Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "lrNX1pV",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key7":"value7"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 7",
          "id": "wq4Bz42",
          "sentAt": "1970-01-01T00:00:00.070Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 7,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.030Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "6RpZWAk",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key6":"value6"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 6",
          "id": "NZXvDMo",
          "sentAt": "1970-01-01T00:00:00.060Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 6,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.025Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "nJ2yOp9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key5":"value5"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 5",
          "id": "GE4lBrZ",
          "sentAt": "1970-01-01T00:00:00.050Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 5,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.020Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "4WNoqAZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key4":"value4"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 4",
          "id": "R2MVGrV",
          "sentAt": "1970-01-01T00:00:00.040Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 4,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.015Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "zl2WXNZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key3":"value3"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 3",
          "id": "pwrLpr8",
          "sentAt": "1970-01-01T00:00:00.030Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 3,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.010Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "MVNeRpL",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key2":"value2"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 2",
          "id": "E7rEDMv",
          "sentAt": "1970-01-01T00:00:00.020Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 2,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.005Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "x9N6Q2j",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key1":"value1"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 1",
          "id": "WKM1Nr1",
          "sentAt": "1970-01-01T00:00:00.010Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 1,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "BQAYLpr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key0":"value0"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 0",
          "id": "1GX8zMN",
          "sentAt": "1970-01-01T00:00:00.000Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 0,
    },
  ],
  "isLastPage": true,
}
`;

exports[`snippets routes GET /preview can get paginated snippets 1`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "J2y7Op9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key49":"value49"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 49",
          "id": "E4lZBrZ",
          "sentAt": "1970-01-01T00:00:00.490Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 49,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "WNoKqNZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key48":"value48"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 48",
          "id": "2MVZGMV",
          "sentAt": "1970-01-01T00:00:00.480Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 48,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "l2WyXpZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key47":"value47"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 47",
          "id": "wrL3pM8",
          "sentAt": "1970-01-01T00:00:00.470Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 47,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "VNe5RNL",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key46":"value46"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 46",
          "id": "7rE1Drv",
          "sentAt": "1970-01-01T00:00:00.460Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 46,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "9N64QAj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key45":"value45"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 45",
          "id": "KM1kNX1",
          "sentAt": "1970-01-01T00:00:00.450Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 45,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "QAYLLpr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key44":"value44"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 44",
          "id": "GX8zzMN",
          "sentAt": "1970-01-01T00:00:00.440Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 44,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "nABow20",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key43":"value43"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 43",
          "id": "bXqZn4e",
          "sentAt": "1970-01-01T00:00:00.430Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 43,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "eZN59NR",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key42":"value42"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 42",
          "id": "AxMPArq",
          "sentAt": "1970-01-01T00:00:00.420Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 42,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "B1NvdAd",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key41":"value41"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 41",
          "id": "eDMY7XO",
          "sentAt": "1970-01-01T00:00:00.410Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 41,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "DJ2RqAB",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key40":"value40"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 40",
          "id": "0gMZjML",
          "sentAt": "1970-01-01T00:00:00.400Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 40,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "MV2O8NJ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key39":"value39"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 39",
          "id": "emr0xrg",
          "sentAt": "1970-01-01T00:00:00.390Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 39,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "e7AKqN8",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key38":"value38"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 38",
          "id": "Zar9Arz",
          "sentAt": "1970-01-01T00:00:00.380Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 38,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "5QNj12x",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key37":"value37"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 37",
          "id": "13XWL48",
          "sentAt": "1970-01-01T00:00:00.370Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 37,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "8Bp8WNj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key36":"value36"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 36",
          "id": "jVMN948",
          "sentAt": "1970-01-01T00:00:00.360Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 36,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "60Ab9pg",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key35":"value35"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 35",
          "id": "7342Z45",
          "sentAt": "1970-01-01T00:00:00.350Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 35,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "9GAwQNj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key34":"value34"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 34",
          "id": "OWraYrk",
          "sentAt": "1970-01-01T00:00:00.340Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 34,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "MYAPkpV",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key33":"value33"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 33",
          "id": "aprjRrb",
          "sentAt": "1970-01-01T00:00:00.330Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 33,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "y02Vb2d",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key32":"value32"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 32",
          "id": "borgpXP",
          "sentAt": "1970-01-01T00:00:00.320Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 32,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "3r23EpP",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key31":"value31"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 31",
          "id": "pVrpLrJ",
          "sentAt": "1970-01-01T00:00:00.310Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 31,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "xRNMKA4",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key30":"value30"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 30",
          "id": "yErA5rV",
          "sentAt": "1970-01-01T00:00:00.300Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 30,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "L1A4Q2q",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key29":"value29"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 29",
          "id": "1eXK7XY",
          "sentAt": "1970-01-01T00:00:00.290Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 29,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /preview can get paginated snippets after cursor 1`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "L1A4Q2q",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key29":"value29"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 29",
          "id": "1eXK7XY",
          "sentAt": "1970-01-01T00:00:00.290Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 29,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.140Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "3VNGgNj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key28":"value28"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 28",
          "id": "Q84y0Xk",
          "sentAt": "1970-01-01T00:00:00.280Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 28,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.135Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "nopEnAw",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key27":"value27"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 27",
          "id": "3LrdN46",
          "sentAt": "1970-01-01T00:00:00.270Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 27,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.130Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "BV2LRpb",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key26":"value26"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 26",
          "id": "evXRZXY",
          "sentAt": "1970-01-01T00:00:00.260Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 26,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.125Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "V1p7jNW",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key25":"value25"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 25",
          "id": "90X3YMa",
          "sentAt": "1970-01-01T00:00:00.250Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 25,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.120Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "lBAmXpg",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key24":"value24"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 24",
          "id": "YV4eRMN",
          "sentAt": "1970-01-01T00:00:00.240Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 24,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.115Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "0XNlLND",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key23":"value23"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 23",
          "id": "k34zoMx",
          "sentAt": "1970-01-01T00:00:00.230Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 23,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.110Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "m920GAL",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key22":"value22"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 22",
          "id": "gbrmyrE",
          "sentAt": "1970-01-01T00:00:00.220Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 22,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.105Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "GnADe2q",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key21":"value21"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 21",
          "id": "gyXGOXz",
          "sentAt": "1970-01-01T00:00:00.210Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 21,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.100Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "4b2JmAe",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key20":"value20"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 20",
          "id": "D3roGrZ",
          "sentAt": "1970-01-01T00:00:00.200Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 20,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.095Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "vYp9JAX",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key19":"value19"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 19",
          "id": "LR4bLrz",
          "sentAt": "1970-01-01T00:00:00.190Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 19,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.090Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "rapz6p4",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key18":"value18"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 18",
          "id": "nxMD6Xy",
          "sentAt": "1970-01-01T00:00:00.180Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 18,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.085Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "KaNr92j",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key17":"value17"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 17",
          "id": "Y0rJbrp",
          "sentAt": "1970-01-01T00:00:00.170Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 17,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.080Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "5kA1mA3",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key16":"value16"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 16",
          "id": "p845A4a",
          "sentAt": "1970-01-01T00:00:00.160Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 16,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.075Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "G62kzAP",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key15":"value15"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 15",
          "id": "6746Z4j",
          "sentAt": "1970-01-01T00:00:00.150Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 15,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.070Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "06NQ9NX",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key14":"value14"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 14",
          "id": "gJXn0Me",
          "sentAt": "1970-01-01T00:00:00.140Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 14,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.065Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "gP2arNr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key13":"value13"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 13",
          "id": "a1X7l43",
          "sentAt": "1970-01-01T00:00:00.130Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 13,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.060Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "YqpdxpO",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key12":"value12"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 12",
          "id": "K2rka49",
          "sentAt": "1970-01-01T00:00:00.120Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 12,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.055Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "RgAnVAQ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key11":"value11"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 11",
          "id": "EQXQqX7",
          "sentAt": "1970-01-01T00:00:00.110Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 11,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.050Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "jYAgnpQ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key10":"value10"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 10",
          "id": "gKMxBX8",
          "sentAt": "1970-01-01T00:00:00.100Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 10,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.045Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "4GAx529",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key9":"value9"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 9",
          "id": "nBXweM2",
          "sentAt": "1970-01-01T00:00:00.090Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 9,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /preview can get when filtering by creator 1`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "J2y7Op9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key49":"value49"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 49",
          "id": "E4lZBrZ",
          "sentAt": "1970-01-01T00:00:00.490Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 49,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "WNoKqNZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key48":"value48"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 48",
          "id": "2MVZGMV",
          "sentAt": "1970-01-01T00:00:00.480Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 48,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "l2WyXpZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key47":"value47"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 47",
          "id": "wrL3pM8",
          "sentAt": "1970-01-01T00:00:00.470Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 47,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "VNe5RNL",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key46":"value46"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 46",
          "id": "7rE1Drv",
          "sentAt": "1970-01-01T00:00:00.460Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 46,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "9N64QAj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key45":"value45"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 45",
          "id": "KM1kNX1",
          "sentAt": "1970-01-01T00:00:00.450Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 45,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "QAYLLpr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key44":"value44"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 44",
          "id": "GX8zzMN",
          "sentAt": "1970-01-01T00:00:00.440Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 44,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "nABow20",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key43":"value43"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 43",
          "id": "bXqZn4e",
          "sentAt": "1970-01-01T00:00:00.430Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 43,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "eZN59NR",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key42":"value42"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 42",
          "id": "AxMPArq",
          "sentAt": "1970-01-01T00:00:00.420Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 42,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "B1NvdAd",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key41":"value41"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 41",
          "id": "eDMY7XO",
          "sentAt": "1970-01-01T00:00:00.410Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 41,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "DJ2RqAB",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key40":"value40"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 40",
          "id": "0gMZjML",
          "sentAt": "1970-01-01T00:00:00.400Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 40,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "MV2O8NJ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key39":"value39"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 39",
          "id": "emr0xrg",
          "sentAt": "1970-01-01T00:00:00.390Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 39,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "e7AKqN8",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key38":"value38"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 38",
          "id": "Zar9Arz",
          "sentAt": "1970-01-01T00:00:00.380Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 38,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "5QNj12x",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key37":"value37"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 37",
          "id": "13XWL48",
          "sentAt": "1970-01-01T00:00:00.370Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 37,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "8Bp8WNj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key36":"value36"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 36",
          "id": "jVMN948",
          "sentAt": "1970-01-01T00:00:00.360Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 36,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "60Ab9pg",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key35":"value35"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 35",
          "id": "7342Z45",
          "sentAt": "1970-01-01T00:00:00.350Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 35,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "9GAwQNj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key34":"value34"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 34",
          "id": "OWraYrk",
          "sentAt": "1970-01-01T00:00:00.340Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 34,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "MYAPkpV",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key33":"value33"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 33",
          "id": "aprjRrb",
          "sentAt": "1970-01-01T00:00:00.330Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 33,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "y02Vb2d",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key32":"value32"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 32",
          "id": "borgpXP",
          "sentAt": "1970-01-01T00:00:00.320Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 32,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "3r23EpP",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key31":"value31"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 31",
          "id": "pVrpLrJ",
          "sentAt": "1970-01-01T00:00:00.310Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 31,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "xRNMKA4",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key30":"value30"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 30",
          "id": "yErA5rV",
          "sentAt": "1970-01-01T00:00:00.300Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 30,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Crasken",
        "id": "E21K9jm",
        "username": "crasken",
      },
      "id": "L1A4Q2q",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key29":"value29"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 29",
          "id": "1eXK7XY",
          "sentAt": "1970-01-01T00:00:00.290Z",
        },
      ],
      "public": true,
      "title": "Test snippet title",
      "totalComments": 29,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes GET /preview can get when filtering by creator 2`] = `
{
  "data": [
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.245Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "nABWk20",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key49":"value49"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 49",
          "id": "bXql5re",
          "sentAt": "1970-01-01T00:00:00.490Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 49,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.240Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "YAgwnAQ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key48":"value48"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 48",
          "id": "KMxjBX8",
          "sentAt": "1970-01-01T00:00:00.480Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 48,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.235Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "GAxn5N9",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key47":"value47"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 47",
          "id": "BXwLe42",
          "sentAt": "1970-01-01T00:00:00.470Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 47,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.230Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "4AqKDNK",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key46":"value46"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 46",
          "id": "PrOlQX6",
          "sentAt": "1970-01-01T00:00:00.460Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 46,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.225Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "rNX41NV",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key45":"value45"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 45",
          "id": "q4Bxzr2",
          "sentAt": "1970-01-01T00:00:00.450Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 45,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.220Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "RpZZWpk",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key44":"value44"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 44",
          "id": "ZXvNDXo",
          "sentAt": "1970-01-01T00:00:00.440Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 44,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.215Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "J2yEO29",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key43":"value43"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 43",
          "id": "E4lQBMZ",
          "sentAt": "1970-01-01T00:00:00.430Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 43,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.210Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "WNoeqAZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key42":"value42"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 42",
          "id": "2MVmG4V",
          "sentAt": "1970-01-01T00:00:00.420Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 42,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.205Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "l2WMXpZ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key41":"value41"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 41",
          "id": "wrLGpM8",
          "sentAt": "1970-01-01T00:00:00.410Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 41,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.200Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "VNe9RNL",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key40":"value40"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 40",
          "id": "7rEKD4v",
          "sentAt": "1970-01-01T00:00:00.400Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 40,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.195Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "9N6QQ2j",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key39":"value39"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 39",
          "id": "KM1NNr1",
          "sentAt": "1970-01-01T00:00:00.390Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 39,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.190Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "QAYXLpr",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key38":"value38"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 38",
          "id": "GX88zXN",
          "sentAt": "1970-01-01T00:00:00.380Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 38,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.185Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "nABWw20",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key37":"value37"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 37",
          "id": "bXqlnre",
          "sentAt": "1970-01-01T00:00:00.370Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 37,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.180Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "ZN519NR",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key36":"value36"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 36",
          "id": "xMPkA4q",
          "sentAt": "1970-01-01T00:00:00.360Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 36,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.175Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "1Nved2d",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key35":"value35"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 35",
          "id": "DMY27rO",
          "sentAt": "1970-01-01T00:00:00.350Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 35,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.170Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "J2Rjq2B",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key34":"value34"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 34",
          "id": "gMZQj4L",
          "sentAt": "1970-01-01T00:00:00.340Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 34,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.165Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "V2OP8NJ",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key33":"value33"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 33",
          "id": "mr0oxMg",
          "sentAt": "1970-01-01T00:00:00.330Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 33,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.160Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "7AK1qN8",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key32":"value32"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 32",
          "id": "ar91Arz",
          "sentAt": "1970-01-01T00:00:00.320Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 32,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.155Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "QNjG1px",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key31":"value31"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 31",
          "id": "3XWoLX8",
          "sentAt": "1970-01-01T00:00:00.310Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 31,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.150Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "Bp8QWAj",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key30":"value30"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 30",
          "id": "VMNq948",
          "sentAt": "1970-01-01T00:00:00.300Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 30,
    },
    {
      "app": {
        "id": "zNrpboD",
        "name": "Discord",
      },
      "appSpecificDataJson": "{"key":"value"}",
      "createdAt": "1970-01-01T00:00:00.145Z",
      "creator": {
        "createdAt": "1970-01-01T00:00:00.010Z",
        "displayName": "Bah",
        "id": "MBj8J1K",
        "username": "bah",
      },
      "id": "0Abn9Ag",
      "interaction": {
        "views": 0,
      },
      "messages": [
        {
          "appSpecificDataJson": "{"key29":"value29"}",
          "authorAvatarUrl": "http://example.com/123.png",
          "authorIdentifier": "1234",
          "authorUsername": "Icyspawn",
          "content": "Content 29",
          "id": "3429ZX5",
          "sentAt": "1970-01-01T00:00:00.290Z",
        },
      ],
      "public": true,
      "title": "eltit teppins tseT",
      "totalComments": 29,
    },
  ],
  "isLastPage": false,
}
`;

exports[`snippets routes POST / can create a snippet with auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "username": "crasken",
  },
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value 0"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 1"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 3"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 4"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 5"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 6"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 7"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 8"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 9"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 10"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 11"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 12"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 13"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 14"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 15"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 16"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 17"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 18"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 19"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST / can create a snippet with empty content message 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creator": {
    "createdAt": "1970-01-01T00:00:00.010Z",
    "displayName": "Crasken",
    "id": "E21K9jm",
    "username": "crasken",
  },
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST / can create a snippet with no auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creator": null,
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value 0"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 1"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 3"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 4"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 5"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 6"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 7"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 8"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 9"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 10"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 11"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 12"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 13"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 14"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 15"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 16"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 17"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 18"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 19"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
}
`;

exports[`snippets routes POST / can create a snippet with no auth 2`] = `
{
  "appId": 1,
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": null,
  "id": 1,
  "public": true,
  "title": "Test snippet title",
}
`;
